# AstraTutorialExample

./: .gitignore  CMakeLists.txt  README.md
AstraEngine/: .gitignore  README.md  setup.cmake
AstraEngine/AstraCore/: CMakeLists.txt
AstraEngine/AstraCore/include/: App.h  AppRT.h  Camera.h  CommandList.h  Device.h  Globals.h  GuiController.h  InputManager.h  Light.h  Mesh.h  Node3D.h  Pipeline.h  RenderContext.h  Renderer.h  Scene.h  Utils.h
AstraEngine/AstraCore/shaders/: frag_shader.frag  host_device.h  post.frag  raycommon.glsl  raytrace.rchit  raytrace_iter.rchit  raytrace_iter.rgen  raytrace_iter.rmiss  vert_shader.vert  wavefront.glsl
AstraEngine/AstraCore/src/: App.cpp  AppRT.cpp  Camera.cpp  CommandList.cpp  Device.cpp  GuiController.cpp  InputManager.cpp  Light.cpp  Mesh.cpp  Node3D.cpp  Pipeline.cpp  Renderer.cpp  Scene.cpp  Utils.cpp
AstraEngine/docs/: index.html
AstraEngine/docs/english/: _app_8cpp.html  _app_8cpp_source.html  _app_8h.html  _app_8h_source.html  _app_r_t_8cpp.html  _app_r_t_8cpp_source.html  _app_r_t_8h.html  _app_r_t_8h_source.html  _camera_8cpp.html  _camera_8cpp_source.html  _camera_8h.html  _camera_8h_source.html  _command_list_8cpp.html  _command_list_8cpp_source.html  _command_list_8h.html  _command_list_8h.js  _command_list_8h_source.html  _device_8cpp.html  _device_8cpp_source.html  _device_8h.html  _device_8h.js  _device_8h_source.html  _globals_8h.html  _globals_8h_source.html  _gui_controller_8cpp.html  _gui_controller_8cpp_source.html  _gui_controller_8h.html  _gui_controller_8h_source.html  _input_manager_8cpp.html  _input_manager_8cpp_source.html  _input_manager_8h.html  _input_manager_8h.js  _input_manager_8h_source.html  _light_8cpp.html  _light_8cpp_source.html  _light_8h.html  _light_8h_source.html  _mesh_8cpp.html  _mesh_8cpp_source.html  _mesh_8h.html  (+191 more)
AstraEngine/docs/english/search/: all_1.js  all_11.js  all_13.js  all_14.js  all_15.js  all_3.js  all_4.js  all_6.js  all_9.js  all_b.js  all_c.js  all_e.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_8.js  files_a.js  functions_0.js  (+21 more)
AstraEngine/docs/spanish/: _app_8cpp.html  _app_8cpp_source.html  _app_8h.html  _app_8h.js  _app_8h_source.html  _app_r_t_8cpp.html  _app_r_t_8cpp_source.html  _app_r_t_8h.html  _app_r_t_8h.js  _app_r_t_8h_source.html  _camera_8cpp.html  _camera_8cpp_source.html  _camera_8h.html  _camera_8h.js  _camera_8h_source.html  _command_list_8cpp.html  _command_list_8cpp_source.html  _command_list_8h.html  _command_list_8h_source.html  _device_8cpp.html  _device_8cpp.js  _device_8cpp_source.html  _device_8h.html  _device_8h_source.html  _globals_8h.html  _globals_8h.js  _globals_8h_source.html  _gui_controller_8cpp.html  _gui_controller_8cpp_source.html  _gui_controller_8h.html  _gui_controller_8h.js  _gui_controller_8h_source.html  _input_manager_8cpp.html  _input_manager_8cpp_source.html  _input_manager_8h.html  _input_manager_8h_source.html  _light_8cpp.html  _light_8cpp_source.html  _light_8h.html  _light_8h.js  (+194 more)
AstraEngine/docs/spanish/search/: all_12.js  all_16.js  all_17.js  all_5.js  all_7.js  all_8.js  all_a.js  all_d.js  all_f.js  classes_0.js  classes_2.js  classes_6.js  classes_7.js  classes_9.js  classes_b.js  classes_c.js  classes_e.js  defines_5.js  enums_0.js  enums_1.js  enumvalues_3.js  enumvalues_b.js  files_1.js  files_3.js  files_4.js  functions_10.js  functions_11.js  functions_14.js  functions_16.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_b.js  functions_f.js  related_0.js  searchdata.js  variables_0.js  variables_3.js  variables_5.js  (+6 more)
AstraEngine/nvpro_core/: CMakeLists.txt
AstraEngine/nvpro_core/cmake/: setup.cmake
AstraEngine/nvpro_core/nvvk/: context_vk.cpp  context_vk.hpp  descriptorsets_vk.hpp  pipeline_vk.hpp  resourceallocator_vk.cpp  sbtwrapper_vk.hpp
assets/: aguacate.mtl  espejo.mtl  mono_cristal.mtl  plane.mtl
include/: miApp.h  miGui.h  miPipelines.h
shaders/: normal.frag  normal.vert  wireframe.frag  wireframe.vert
src/: main.cpp  miApp.cpp  miGui.cpp  miPipelines.cpp
